--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
     </div>
     <div>
         <ul class="nav navbar-nav">
-            <li><a href="#">Matches</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Create</a></li>
-            <li><a href="#">About</a></li>
+            <li><a routerLink="/">Matches</a></li>
+            <li><a routerLink="/">Register</a></li>
+            <li><a routerLink="/create">Create</a></li>
+            <li><a routerLink="/">About</a></li>
         </ul>
     </div>
   </div>
