--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,9 @@
                   <div class="card-body">
                     <h5 class="card-title">{{current_game}}</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">View</a>
+                    <div class="button-container">
+                      <button class="btn btn-primary" (click)="viewTournamentClick()">View</button>
+                    </div>
                   </div>
               </div>
           </div>
