Bug fix for create tournament

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,8 +1,10 @@
 <form>
-  <h1>Create Match</h1> <br/>
-  <h3>Name of Tournament</h3><br/>
-  <input class="form-control" type="text" placeholder="Tournament Name" [(ngModel)]="tournamentText"><br/>
+  <h1>Create Match</h1>
+  <h3>Name of Tournament</h3>
+  <input type="text" class="txt" name="item" placeholder="Tournament Name" [(ngModel)]="tournText">
+  <br/>
+  <span>{{ tournText }}</span>
   <h3>Date of Tournament</h3>
   <dl-date-time-picker class="datepicker"></dl-date-time-picker>
-  <button class="btn btn-lg btn-primary" (click)="createTournament()">View</button>
+  <button class="btn btn-lg btn-submit" (click)="createTournament()">Submit</button>
 </form>
