changes to home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand-sm navbar-default navbar-fixed-top">
+<nav class="navbar navbar-expand-sm navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <img class="brand" alt="Brand" src="assets/logo.png">
+        <img class="brand" alt="Brand" src="assets/MU.png">
       </a>
     </div>
     <div>
