--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,15 @@
   <div class="hero">
     <div class="hero-body">
       <div class="container">
-        <h1 class="text-center"><span style="color:red">Mat</span><span style="color:white">c</span><span style="color:blue">hed</span></h1>
+          <!-- <img class="title" alt="title" src="assets/Title.png"> -->
+        <!-- <h1 class="text-center"><span style="color:red">Mat</span><span style="color:white">c</span><span style="color:blue">hed</span></h1> -->
       </div>
     </div>
   </div>
   <div class="current-games">
     <div class="container-fluid">
       <h2>Matches</h2>
-      <div class="row card-group">
+      <div class="view row card-group">
           <div class="col-4"  *ngFor="let current_match of current_matches">
               <div class="card">
                   <div class="card-body">
@@ -30,7 +31,7 @@
       <div class="join-match">
       <div class="container-fluid">
       <h2 id="matches">Join a Tournament</h2>
-      <div class="row card-group">
+      <div class="join row card-group">
           <div class="col-4"  *ngFor="let avail_match of avail_matches">
               <div class="card">
                   <div class="card-body">
