--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,8 +1,59 @@
 <form>
   <h1>Create Match</h1>
-  <h3>Name of Tournament</h3>
-  <input type="text" class="txt" name="item" placeholder="Tournament Name" [(ngModel)]="tournText">
-  <h3>Date of Tournament</h3>
-  <dl-date-time-picker class="datepicker"></dl-date-time-picker>
-  <button class="btn btn-lg btn-submit" (click)="createTournament()">Submit</button>
-</form>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <strong>Match Name:</strong>
+      </div>
+      <div class="col-md-8">
+          <input type="text" name="matchname" class="txt form-control input-lg col-sm-6" placeholder="ex. Team A" [(ngModel)]="matchName">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+          <strong>Host Name:</strong>
+      </div>
+      <div class="col-md-8">
+        <input type="text" name="hostname" class="txt form-control input-lg col-md-6" placeholder="ex. d{ }" [(ngModel)]="hostName">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+          <strong>Date of Match:</strong>
+      </div>
+      <div class="col-md-8">
+          <input name="matchdate" class="form-control col-md-6" [owlDateTime]="date" [owlDateTimeTrigger]="date" [(ngModel)]="matchDate">
+          <owl-date-time #date></owl-date-time>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+          <strong>Details:</strong>
+      </div>
+      <div class="col-md-8">
+          <textarea type="text" name="details" class="txt input-lg form-control" [(ngModel)]="details"></textarea>
+      </div>
+    </div>  
+  </div>
+  <div class="button-container text-center">
+    <a routerLink="/" class="btn btn-primary" (click)="createTournamentClick()">Join</a>
+  </div>
+  </form>
+  
+  
+
+  <!-- <table class="table table-bordered" id="tbl_employees">
+      <thead>
+        <tr>
+          <th>Teammate</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody id="tbl_posts_body">
+        <tr *ngFor="let teammate of teams">
+          <td>{{teammate}}</td>
+          <td><a class="btn btn-xs delete-record"><i class="glyphicon glyphicon-trash"></i></a></td>
+        </tr>
+      </tbody>
+    </table> -->
+  
