--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div>
         <ul class="nav navbar-nav">
             <li><a routerLink="/">Matches</a></li>
-            <li><a routerLink="/">Register</a></li>
+            <li><a routerLink="/register">Register</a></li>
             <li><a routerLink="/create">Create</a></li>
             <li><a routerLink="/">About</a></li>
         </ul>
