Updated register component to work with route param

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,15 @@
 <nav class="navbar navbar-expand-sm navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" routerLink="/">
         <img class="brand" alt="Brand" src="assets/MU.png">
       </a>
     </div>
     <div>
         <ul class="nav navbar-nav">
             <li><a routerLink="/">Matches</a></li>
-            <li><a routerLink="/register">Register</a></li>
-            <li><a routerLink="/create">Create</a></li>
+            <li><a routerLink="/">Register</a></li>
+            <li><a routerLink="/">Create</a></li>
             <li><a routerLink="/">About</a></li>
         </ul>
     </div>
