--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div>
   <form>
-
+    <h1>Register for a match!</h1>
       <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -27,6 +27,6 @@
               </div>
           </div>
       </div>
-      <a routerLink="/" class="btn btn-primary" (click)="addTeamClick()">Join!</a>
+      <a routerLink="/" class="btn btn-primary center" (click)="addTeamClick()">Join!</a>
   </form>
 </div>
