Updated Register and Create Component

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -6,7 +6,7 @@
         <strong>Match Name:</strong>
       </div>
       <div class="col-md-8">
-          <input type="text" name="matchname" class="txt form-control input-lg col-sm-6" placeholder="ex. Team A" [(ngModel)]="matchName">
+          <input type="text" name="matchname" class="txt form-control input-lg col-sm-6" placeholder="" [(ngModel)]="matchName">
       </div>
     </div>
     <div class="row">
@@ -14,7 +14,7 @@
           <strong>Host Name:</strong>
       </div>
       <div class="col-md-8">
-        <input type="text" name="hostname" class="txt form-control input-lg col-md-6" placeholder="ex. d{ }" [(ngModel)]="hostName">
+        <input type="text" name="hostname" class="txt form-control input-lg col-md-6" placeholder="" [(ngModel)]="hostName">
       </div>
     </div>
     <div class="row">
@@ -34,6 +34,30 @@
           <textarea type="text" name="details" class="txt input-lg form-control" [(ngModel)]="details"></textarea>
       </div>
     </div>  
+    <div class="row">
+        <div class="col-md-4">
+          <strong>Team Name:</strong>
+        </div>
+        <div class="col-md-8">
+            <input type="text" name="teamname" class="txt form-control input-lg col-lg-6" placeholder="" [(ngModel)]="teamName">
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4">
+            <strong>Teammate 1:</strong>
+          </div>
+          <div class="col-md-8">
+              <input type="text" name="teammate1" class="txt form-control input-lg col-sm-6" placeholder="" [(ngModel)]="teammate1">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4">
+            <strong>Teammate 2:</strong>
+          </div>
+          <div class="col-md-8">
+              <input type="text" name="teammate2" class="txt form-control input-lg col-sm-6" placeholder="" [(ngModel)]="teammate2">
+          </div>
+      </div>
   </div>
   <div class="button-container text-center">
     <a routerLink="/" class="btn btn-primary" (click)="createTournamentClick()">Join</a>
