--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,12 +7,12 @@
               <strong>Team Name:</strong>
             </div>
             <div class="col-md-8">
-                <input type="text" name="teamname" class="txt form-control input-lg col-lg-6" placeholder="ex. Team A" [(ngModel)]="teamName">
+                <input type="text" name="teamname" class="txt form-control input-lg col-lg-6" placeholder="" [(ngModel)]="teamName">
             </div>
           </div>
           <div class="row">
               <div class="col-md-4">
-                <strong>Teammate:</strong>
+                <strong>Teammate 1:</strong>
               </div>
               <div class="col-md-8">
                   <input type="text" name="teammate1" class="txt form-control input-lg col-sm-6" placeholder="" [(ngModel)]="teammate1">
@@ -20,7 +20,7 @@
           </div>
           <div class="row">
               <div class="col-md-4">
-                <strong>Teammate:</strong>
+                <strong>Teammate 2:</strong>
               </div>
               <div class="col-md-8">
                   <input type="text" name="teammate2" class="txt form-control input-lg col-sm-6" placeholder="" [(ngModel)]="teammate2">
