--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,9 +8,48 @@
     background-attachment: fixed;
 }
 
+.shadow{
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+}
 
+.home-button{
+    width:100%;
+    
+    
+}
 
+.half{
 
+    padding-top: 20%;
+    padding-left: 25%;
+}
+
+.create-btn{
+    width: 60%;
+    padding: 20px 0px;
+    font-size: 20px;
+    margin-top: 60px;
+    margin-left: 70px;
+    background-color: #FF3F37;
+}
+
+.red{
+    background-color: #FF3F37 ;
+    border-color:#FF3F37;
+}
+
+.blue{
+    background-color: #6043EE;
+    border-color: #6043EE;
+}
+
+.top-part{
+        
+        color: white;
+        text-align: center;
+        padding-bottom: 10px;
+        padding-top: 20px;
+}
 
 .card-group {
     padding: 0rem 2rem;
@@ -21,6 +60,47 @@ h1 {
     letter-spacing: 6px;
 }
 
+.full{
+padding: 0 0 0 0;
+margin: 0 0 0 0;
+width: 100%;
+
+}
+
+
+.green{
+    // background-color:#383838;
+    width: 100%;
+    height:100%;
+    border-radius: 10px;
+    
+}
+.box{ 
+    padding: 0rem 3rem;
+
+}
+ol{
+    color: black;
+   
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: left;
+    
+
+}
+li {
+    margin-left:15%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom:5px;
+    font-size: 20px;
+}
+
 h2 {
     padding: 2rem;
+    padding-top: 50px;
+    padding-bottom:15px;
+    
+
+    font-size: 40px;
 }
