--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
       <h2>Matches</h2>
       <div class="view row card-group">
-          <div class="col-4" *ngFor="let avail_match of avail_matches; let i = index">
+          <div class="col-4" *ngFor="let current_match of current_matches; let i = index">
               <div class="card shadow">
                   <div class="card-body top-part red">
                     <h5 class="card-title"> <strong>{{current_match.title}}</strong></h5>
