--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~open-iconic/font/css/open-iconic-bootstrap.css';
 @import "~ng-pick-datetime/assets/style/picker.min.css";
+
+.nav-padding {
+    padding-top: 7rem;
+}
