--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -3,32 +3,32 @@
 <div class="wrapper">
   <div class="item">
     <div class="item-parent">
-      <p>Parent</p>
+      <p>Deloitte</p>
     </div>
     <div class="item-childrens">
       <div class="item-child">
         <div class="item">
           <div class="item-parent">
-            <p>Parent</p>
+            <p>Deloitte</p>
           </div>
           <div class="item-childrens">
             <div class="item-child">
               <div class="item">
                 <div class="item-parent">
-                  <p>Parent</p>
+                  <p>Deloitte</p>
                 </div>
                 <div class="item-childrens">
                   <div class="item-child">
-                    <p>child 1</p>
+                    <p>TR</p>
                   </div>
                   <div class="item-child">
-                    <p>child 2</p>
+                    <p>Deloitte</p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="item-child">
-              <p>child 2</p>
+              <p>Blackberry</p>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
       <div class="item-child">
         <div class="item">
           <div class="item-parent">
-            <p>Parent</p>
+            <p>TD</p>
           </div>
           <div class="item-childrens">
             <div class="item-child">
@@ -46,16 +46,16 @@
                 </div>
                 <div class="item-childrens">
                   <div class="item-child">
-                    <p>child 1</p>
+                    <p>General Motors</p>
                   </div>
                   <div class="item-child">
-                    <p>child 2</p>
+                    <p>TD</p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="item-child">
-              <p>child 2</p>
+              <p>Manulife</p>
             </div>
           </div>
         </div>
