--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,8 @@
 <div class="nav-padding">
   <form>
     <h1>Register for a match!</h1>
+    <br>
+    <br>
       <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -27,6 +29,10 @@
               </div>
           </div>
       </div>
-      <a routerLink="/" class="btn btn-primary center" (click)="addTeamClick()">Join!</a>
+      <br>
+      <div class = "text-center">
+            <a routerLink="/" class="btn btn-primary center" (click)="addTeamClick()">Join!</a>
+      </div>
+     
   </form>
 </div>
