--- a/src/app/view/view.component.scss
+++ b/src/app/view/view.component.scss
@@ -5,7 +5,7 @@ h1 {
     padding-left: 4rem;
 }
 .view {
-  background-color: DarkSalmon ;
+  background-color: white ;
 }
 
 .wrapper{
@@ -20,7 +20,8 @@ h1 {
   p{
     padding: 20px;
     margin: 0;
-    background-color: Beige;
+    color: white;
+    background-color: #6043EE;
   }
   
   &-parent{
@@ -35,7 +36,7 @@ h1 {
         height: 2px;
         left: 0;
         top: 50%;
-        background-color: #fff;
+        background-color: #FF3F37;
         transform: translateX(-100%);
     }
   }
@@ -54,7 +55,7 @@ h1 {
     &:before{
       content: '';
       position: absolute;
-      background-color: #fff;
+      background-color: #FF3F37;
       right: 0;
       top: 50%;
       transform: translateX(100%);
@@ -64,7 +65,7 @@ h1 {
     &:after{
       content: '';
       position: absolute;
-      background-color: #fff;
+      background-color: #FF3F37;
       right: -$side-margin / 2;
       height: calc(50% + 22px) ;
       width: 2px;
